[package]
name = "rhymuweb-client"
version = "1.0.0"
description = "HTTP user agent for fetching web resources"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["web-programming"]
keywords = ["http", "client"]
repository = "https://github.com/rhymu8354/HttpClient.git"

[dependencies]
async-std = "1.6"
async-tls = "0.10"
async-trait = "0.1"
futures = "0.3"
pantry = "1.0"
rhymuri = "1.1"
rhymuweb = "1.0"
thiserror = "1.0"
rustls = "0.18"

[dev-dependencies]
anyhow = "1.0"
async-ctrlc = "1.2"
rhymessage = "1.3"
structopt = "0.3"
webpki-roots = "0.19"
